k8s/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: springboot-api
spec:
  type: NodePort
  selector:
    app: springboot-api
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30080
