k8s/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: springboot-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: nagpapp.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: springboot-api
                port:
                  number: 8080
